<resources>
    <string name="app_name">Money Manager</string>
    <string name="money_manager">Money Manager</string>
    <string name="slogan">Control your life</string>
    <string name="sliding_menu_opened">Sliding menu opened</string>
    <string name="sliding_menu_closed">Sliding menu closed</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="report">Report</string>
    <string name="strategy">Strategy</string>
    <string name="about">About</string>
    <string name="home_detail">Record pays and earn</string>
    <string name="category_detail">Add more category</string>
    <string name="report_detail">Statistics by time</string>
    <string name="strategy_detail">Manage money by your strategy</string>
    <string name="about_detail">More information</string>
    <string name="empty_history_prompt">The history will appear here</string>
    <string name="income">Income</string>
    <string name="payment">Payment</string>
    <string name="balance">Balance</string>
    <string name="add_income">Add income</string>
    <string name="add_payment">Add payment</string>
    <string name="save">Save</string>
    <string name="save_and_add_more">Save &amp; add more</string>
    <string name="cancel">Cancel</string>
    <string name="value">Value</string>
    <string name="detail">Detail</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="date">Date (Auto insert current date)</string>
    <string name="saving">Saving&#8230;</string>
    <string name="invalid_value">This value is invalid</string>
    <string name="got_it">Got it</string>
    <string name="balance_prompt"><![CDATA[This is your Balance = <font color="#42c662">Income</font> -
        <font color="#f66700">Payment</font>]]></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_detail">Date</string>
    <string name="not_specified">Not specified</string>
    <string name="update">Update</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="ok">OK</string>
    <string name="select_time">Select time</string>
    <!--Filter type-->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="pick_a_day">Pick a day</string>
    <string name="this_week">This week (Mon - today)</string>
    <string name="this_month">This month (1st - today)</string>
    <string name="this_year">This year (Jan 1 - today)</string>
    <string name="range">Range</string>
    <string name="lifetime">Lifetime</string>
    <string name="select_start_day">Select start date</string>
    <string name="select_end_day">Select end date</string>
    <string name="invalid_range">Invalid range, the end-date can not be sooner then the start-date</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
