<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black_opacity"
             android:orientation="vertical"
             android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rect_white_big_corner"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/dialog_balance_prompt_tv_balance_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm_delete"
            android:textColor="@color/black_2"
            android:textSize="14dp"
            android:textStyle="bold"
            tools:ignore="SpUsage"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/dialog_confirm_delete_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_orange_white_rect"
                android:padding="10dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/selector_white_orange_color"
                android:textSize="13dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.8"/>

            <Button
                android:id="@+id/dialog_confirm_delete_btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/selector_green_white_rect"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/selector_white_green_color"
                android:textSize="13dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>