<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moneymanager.app.com.domains.home.detail.ItemDetailActivity"
    tools:ignore="HardcodedText,ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/activity_item_detail_tv_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_item_detail_iv_category"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="2dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_category"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/category"
                android:textAlignment="center"
                android:textColor="@color/black_2"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_item_detail_tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:text="Food"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/activity_item_detail_iv_detail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_detail_green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/detail"
                android:textAlignment="center"
                android:textColor="@color/black_2"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_item_detail_tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/grey_2"
                android:hint="@string/not_specified"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_item_detail_iv_date"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:padding="2dp"
                android:src="@drawable/ic_date_green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/date_detail"
                android:textAlignment="center"
                android:textColor="@color/black_2"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activity_item_detail_tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:text="Date created"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="15.3sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_item_detail_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/activity_item_detail_btn_edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/selector_button_white"
                android:padding="0dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@color/selector_white_green_color"
                android:textSize="14sp"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white_opacity"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/activity_item_detail_btn_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/selector_button_white"
                android:padding="0dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/selector_white_green_color"
                android:textSize="14sp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
